force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__Argument__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Argument__c</fullName>
    <description>Parameter to pass to the Job</description>
    <label>Batch Argument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>