force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__BatchId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BatchId__c</fullName>
    <label>Batch Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>