force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__CanRerun__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanRerun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Rerun</label>
    <type>Checkbox</type>
</CustomField>