force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__ChildJobs__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ChildJobs__c</fullName>
    <label>Child Jobs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>