force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__ContextId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextId__c</fullName>
    <label>Context Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>