force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__CPUTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CPUTime__c</fullName>
    <label>CPUTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>