force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplayName__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>