force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__Log__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Log__c</fullName>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>