force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__Message__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>