force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__Parameter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Parameter__c</fullName>
    <label>Parameter</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>