force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__Priority__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>JobPriority</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Jobs (Priority)</relationshipLabel>
    <relationshipName>JobPriority</relationshipName>
    <type>Lookup</type>
</CustomField>