force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__RequiresManualIntervention__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RequiresManualIntervention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Manual Intervention</label>
    <type>Checkbox</type>
</CustomField>