force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__ResolutionContextId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResolutionContextId__c</fullName>
    <label>Resolution Context Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>