force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__ResolutionMessage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResolutionMessage__c</fullName>
    <label>Resolution Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>