force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__RootContextId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RootContextId__c</fullName>
    <externalId>true</externalId>
    <label>Root Context Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>