force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__RunDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RunDate__c</fullName>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>