force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__RunSilently__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RunSilently__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Silently</label>
    <type>Checkbox</type>
</CustomField>