force-app/main/default/objects/KimbleOne__Job__c/fields/KimbleOne__SOQLRowCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SOQLRowCount__c</fullName>
    <label>SOQLRowCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>