force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DisplayName__c</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <columns>KimbleOne__RunningTime__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__ExecutionMode__c</columns>
    <columns>KimbleOne__Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>