force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__All1.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All1</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__Message__c</columns>
    <columns>KimbleOne__Priority__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__DisplayName__c</columns>
    <columns>KimbleOne__ContextId__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>