force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__By_Argument.listView-meta.xml
<ListView>
    <fullName>KimbleOne__By_Argument</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__DisplayName__c</columns>
    <filterScope>Everything</filterScope>
    <label>By Argument</label>
    <language>en_US</language>
</ListView>