force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__Failed.listView-meta.xml
<ListView>
    <fullName>KimbleOne__Failed</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__Priority__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <columns>KimbleOne__Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed</label>
    <language>en_US</language>
</ListView>