force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__JobSendExpenseClaimForApproval.listView-meta.xml
<ListView>
    <fullName>KimbleOne__JobSendExpenseClaimForApproval</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__Message__c</columns>
    <columns>KimbleOne__Priority__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>JobSendExpenseClaimForApproval</value>
    </filters>
    <label>JobSendExpenseClaimForApproval</label>
    <language>en_US</language>
</ListView>