force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__JobSendTimesheetForApproval.listView-meta.xml
<ListView>
    <fullName>KimbleOne__JobSendTimesheetForApproval</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>JobSendTimesheetForApproval</value>
    </filters>
    <label>JobSendTimesheetForApproval</label>
    <language>en_US</language>
</ListView>