force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__Pending.listView-meta.xml
<ListView>
    <fullName>KimbleOne__Pending</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__RunImmediately__c</columns>
    <columns>KimbleOne__Priority__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>KimbleOne__ContextId__c</columns>
    <columns>KimbleOne__DisplayName__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>KimbleOne__RunDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Pending Today</label>
    <language>en_US</language>
</ListView>