force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__PendingAll.listView-meta.xml
<ListView>
    <fullName>KimbleOne__PendingAll</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__ContextId__c</columns>
    <columns>KimbleOne__DisplayName__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending</label>
    <language>en_US</language>
</ListView>