force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__PendingToday.listView-meta.xml
<ListView>
    <fullName>KimbleOne__PendingToday</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Pending Today</label>
    <language>en_US</language>
</ListView>