force-app/main/default/objects/KimbleOne__Job__c/listViews/KimbleOne__RequiresManualIntervention.listView-meta.xml
<ListView>
    <fullName>KimbleOne__RequiresManualIntervention</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DisplayName__c</columns>
    <columns>KimbleOne__Argument__c</columns>
    <columns>KimbleOne__RunDate__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__RequiresManualIntervention__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Requires Manual Intervention</label>
    <language>en_US</language>
</ListView>